# anunnaki-server

./: .gitignore  pyproject.toml
.github/workflows/: poetry_test.yml
src/anunnaki_server/: app.py  schema.sql
src/anunnaki_server/ext_manager/: __init__.py  db.py  funcs.py  repo.py  views.py
src/anunnaki_server/loader/: __init__.py  funcs.py  source_manager.py  views.py
src/anunnaki_server/model/: __init__.py  extension.py  result.py
src/anunnaki_server/utils/: __init__.py
tests/: conftest.py  test_app.py  test_extensions.py  test_version_serializer.py
tests/fake_data/fake_data_no_update/: index.json
tests/fake_data/fake_data_with_update/: index.json
tests/model/: test_extension.py  test_repo.py
